kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-todo-manager-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-todo-manager-backend
  template:
    metadata:
      labels:
        app: my-todo-manager-backend
    spec:
      containers:
        - name: my-todo-manager-backend
          image: openthisworld/my-todo-manager-backend:latest
          ports:
            - containerPort: 5000
