kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-todo-manager-backend
spec:
  selector:
    app: my-todo-manager-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
