kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-todo-manager-frontend
spec:
  selector:
    app: my-todo-manager-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
