kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-todo-manager-postgres
spec:
  selector:
    app: my-todo-manager-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
