kubernetes/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
    - host: my-todo-manager.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-todo-manager-frontend
                port:
                  number: 80
